--- a/h5game_backend/static/css/game.css
+++ b/h5game_backend/static/css/game.css
@@ -22,14 +22,35 @@
 	border: 1px solid blue;
 }
 
-.answer_block{
-	float:left;
-	height: 40px;
-	width: 120px;
-	font-size: 1rem;
-	display: block;
-	text-align: center;
+.answer_block{    
+	float: left;
+    height: 49%;
+    width: 49%;
+    font-size: 1rem;
+    display: block;
+    text-align: center;
+    line-height: 1000%;
+    border:1px solid green;
+    -webkit-transition: -webkit-transform 1s,opacity 1s,background 1s,width 1s,height 1s,font-size 1s;
+    -webkit-border-radius: 5px;
+    -o-transition-property: width,height,-o-transform,background,font-size,opacity;
+    -o-transition-duration: 1s,1s,1s,1s,1s,1s;
+    -moz-transition-property: width,height,-o-transform,background,font-size,opacity;
+    -moz-transition-duration: 1s,1s,1s,1s,1s,1s;
+    transition-property: width,height,transform,background,font-size,opacity;
+    transition-duration: 1s,1s,1s,1s,1s,1s;
+    border-radius: 5px;
+    opacity: 0.4;
 }
+.answer_block:hover
+{
+	opacity:1;
+	background:#1ec7e6;
+	width:60%;
+	height:60%px;
+	font-size:35px;
+}
+
 .m-ins {
 	width: 273px;
 	height: 54px;
