--- a/h5game_backend/templates/waitnext.html
+++ b/h5game_backend/templates/waitnext.html
@@ -40,6 +40,13 @@
                     <label>{{prize.count}}</label>
                 </div>
             {% endfor %}
+        </div>        
+        <div class="more_game">
+            <div>关注我们<b>一刻talks</b></div>
+            <div>更多精彩奥运游戏，等你来玩</div>
+        </div>
+        <div class="screen_code">
+            <img data-type="gif" src="{{ url_for('static', filename='images/screen.gif')}}">
         </div>
     </body>
 </html>
