--- a/h5game_backend/static/css/game.css
+++ b/h5game_backend/static/css/game.css
@@ -1,5 +1,28 @@
+
+.subject_title{	
+	margin: 1.8rem auto;
+	font-size: 1rem;
+	display: block;
+	text-align: center;
+	line-height: 34px;
+	text-decoration: none;
+    border-radius: 5px;
+    border-bottom: 1px solid green;
+    width: 100%;
+}
+.div_sep{
+	margin: 1.8rem auto;
+	font-size: 1rem;
+	display: block;
+	text-align: center;
+	line-height: 34px;
+	text-decoration: none;
+    border-radius: 5px;
+    border-bottom: 1px solid green;
+    width: 100%;	
+}
 .subject{	
-	width: 75%;
+	width: 298px;
 	height: 180px;
 	margin: 1.8rem auto;
 	font-size: 1rem;
@@ -7,11 +30,56 @@
 	text-align: center;
 	line-height: 34px;
 	text-decoration: none;
-	border: 1px solid blue;
+    border-radius: 5px;
+}
+#img_question{
+	width: 50%;
+	height: 50%;
+	float: left;
+	padding:2px;
+	/*background: #ececec;*/
+	border-radius:32px;
+	/*box-shadow: 0px 0px 1px rgba(0,0,0,0.4);*/
+	box-sizing:border-box;
+	-moz-border-radius: 32px;
+	-webkit-border-radius: 32px;
+	display: table-cell;
+	vertical-align:middle;
+}
+#img_question_tips{
+	width: 40%;
+	height: 40%;
+	display: block;
+	float: right;
+	padding:2px;
+	background: #ececec;
+	border-radius:50%;
+	box-shadow: 0px 0px 1px rgba(0,0,0,0.4);
+	box-sizing:border-box;
+	-moz-border-radius: 100%;
+	-webkit-border-radius: 100%;
+	display: table-cell;
+	vertical-align:middle;
+}
+#img_question img{
+    width:110px;
+    height:110px;
+	line-height: 0;	/* remove line-height */ 
+	display: inline-block;	/* circle wraps image */
+	border-radius: 50%;	/* relative value */
+	vertical-align:middle;
+    overflow:hidden;
+	-moz-border-radius: 50%;
+	-webkit-border-radius: 50%;
+	transition: linear 0.25s;
+}
+.videon_subject{
+	width: 100%;
+	height: 100%;
 }
 
 .answer{	
-	width: 75%;
+	width: 300px;
 	height: 300px;
 	margin: 1.8rem auto;
 	font-size: 1rem;
@@ -19,7 +87,6 @@
 	text-align: center;
 	line-height: 34px;
 	text-decoration: none;
-	border: 1px solid blue;
 }
 
 .answer_block{    
@@ -30,25 +97,12 @@
     display: block;
     text-align: center;
     line-height: 1000%;
-    border:1px solid green;
-    -webkit-transition: -webkit-transform 1s,opacity 1s,background 1s,width 1s,height 1s,font-size 1s;
-    -webkit-border-radius: 5px;
-    -o-transition-property: width,height,-o-transform,background,font-size,opacity;
-    -o-transition-duration: 1s,1s,1s,1s,1s,1s;
-    -moz-transition-property: width,height,-o-transform,background,font-size,opacity;
-    -moz-transition-duration: 1s,1s,1s,1s,1s,1s;
-    transition-property: width,height,transform,background,font-size,opacity;
-    transition-duration: 1s,1s,1s,1s,1s,1s;
+    background-color: green;
     border-radius: 5px;
-    opacity: 0.4;
-}
-.answer_block:hover
-{
-	opacity:1;
-	background:#1ec7e6;
-	width:60%;
-	height:60%px;
-	font-size:35px;
+	opacity: 0.5;
+    /*border:1px solid green;
+    
+    opacity: 0.4;*/
 }
 
 .m-ins {
@@ -62,4 +116,11 @@
 	text-align: center;
 	line-height: 54px;
 	text-decoration: none;
+}
+
+button.btn-disabled{
+	opacity: 0.3;	
+}
+button.m-ins{
+	border: none;
 }
