--- a/h5game_backend/static/css/welcome.css
+++ b/h5game_backend/static/css/welcome.css
@@ -5,6 +5,20 @@ body {
     font-size: 100%;
     background-color: #fff;
     margin: 0;
+	font-size: 1rem;	
+	display: block;
+	text-align: center;
+	line-height: 34px;
+	text-decoration: none;	
+}
+#poster{
+	box-sizing:border-box;
+	padding: 1%;
+}
+#poster img{
+	width: 100%;
+	height: 40%;
+	text-align: center;
 }
 .m-ins {
 	width: 273px;
@@ -22,11 +36,12 @@ body {
 
 .welcome_prize{
 	margin: 1.8rem auto;
-	font-size: 1rem;
-	
-	display: block;
-	text-align: center;
-	line-height: 34px;
-	text-decoration: none;
-	
+}
+
+
+.screen_code img{
+	width: auto !important; 
+	visibility: visible !important; 
+	height: auto !important;
+	max-width: 100%!important;
 }
