remove try all exception

--- a/h5game_backend/templates/game.html
+++ b/h5game_backend/templates/game.html
@@ -20,7 +20,7 @@
         {% assets "home_page_css" %}
             <link rel="stylesheet" href="{{ ASSET_URL }}" />
         {% endassets %} -->
-        <title>开心一夏</title>            
+        <title>{{resp.activeInfo.title}}</title>               
     </head>
     <body  id="main" unselectable="on" onselectstart="return false;">
         <!--题目区域-->        
