--- a/h5game_backend/templates/prized.html
+++ b/h5game_backend/templates/prized.html
@@ -20,7 +20,7 @@
         {% assets "home_page_css" %}
             <link rel="stylesheet" href="{{ ASSET_URL }}" />
         {% endassets %} -->
-        <title>已获取抽奖码</title>            
+        <title>{{resp.activeInfo.title}}</title>            
     </head>
     <body  id="main" unselectable="on" onselectstart="return false;">
         <div id="poster">
