--- a/h5game_backend/templates/welcome.html
+++ b/h5game_backend/templates/welcome.html
@@ -19,19 +19,19 @@
         {% assets "home_page_css" %}
             <link rel="stylesheet" href="{{ ASSET_URL }}" />
         {% endassets %} -->
-        <title>{{resp.info.title}}</title>            
+        <title>{{resp.activeInfo.title}}</title>
     </head>
     <body  id="main" unselectable="on" onselectstart="return false;">
         <!--海报区域-->
         <div id="poster">
-            <img src="{{resp.info.resourceUrl}}">
+            <img src="{{resp.activeInfo.resourceUrl}}">
         </div>
         <!--开始区域-->
         <div id="start">
              {% if resp.shareCode %}
-                <a href="/page/play/{{resp.info.id}}/{{resp.shareCode}}" id="btn" class="m-ins">开始游戏</a>
+                <a href="/page/play/{{resp.activeInfo.id}}/{{resp.shareCode}}" id="btn" class="m-ins">开始游戏</a>
             {% else %}
-                <a href="/page/play/{{resp.info.id}}" id="btn" class="m-ins">开始游戏</a>
+                <a href="/page/play/{{resp.activeInfo.id}}" id="btn" class="m-ins">开始游戏</a>
             {% endif %}
             
         </div>
